# web-diff-large-text

./: .gitignore  Cargo.toml  LICENSE  README.md  cargo.toml  index.html
.github/workflows/: build.yml
pkg/: README.md  large_text_diff.d.ts  large_text_diff.js  large_text_diff_bg.wasm  large_text_diff_bg.wasm.d.ts  package.json
src/: lib.rs
